---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: tba
  Changes:
    - Removed blood bags and pseudodaemona.
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2025.6.3
  Changes:
    - Citric Acid can be converted between py veganism and py version
    - Non-viable Vrauk Mass now requires burlap sacks.
    - Vrauk Frass icon changed
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025.5.30
  Changes:
    - Hardcore Vegetarian now removes slaughtering recipes
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025.5.30
  Changes:
    - Added more synthetic vrauk meat/mass printing recipes
    - Added allowing vrauk module in bioprinter
    - Made vrauks molt and poop faster
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025.5.28
  Changes:
    - Added pressed tofu which can make vegan jerky.
    - Added alternatives to rendering Vrauks to make meat, guts, brains, and formic acid.
    - Fixed locale files of calknut and guar products
    - Added back calknut and guar recipes
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025.5.27
  Changes:
    - Changed the name of soybean and coconut.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025.5.26
  Changes:
    - Ported everything to 2.0
---------------------------------------------------------------------------------------------------
Version: 0.0.22
Date: 2020.11.04
  Changes:
    - Buffed rocket fuel from pseudodaemonas yields.

  Bugfixes: